<resources>
    <string name="app_name">UITPAY</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Mua hàng</string>
    <string name="title_notifications">Cá nhân</string>
<!--    login-->
    <string name="welcome_text">Welcome!</string>
    <string name="to_crm_text">to <font color="#FF6347">Shopping Pay</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="wanna_try_services">Wanna try our services?</string>
    <string name="here_you_are">here you are</string>
    <string name="app_logo">App Logo</string>
<!--    signup-->
    <string name="sign_up_user_title">Sign up for User</string>
    <string name="sign_up_user">Sign Up</string>
    <string name="already_have_user_account">I have user account</string>
<!-- shopping cart-->
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_add_item">Thêm sản phẩm</string>
    <string name="title_empty">Chưa có sản phẩm</string>
    <string name="title_checkout">Đặt hàng</string>
    <string name="title_total_label">Tổng tiền</string>
    <string name="title_total_cost">0đ</string>
    <string name="title_account">Tài khoản</string>
<!-- invoices-->
    <string name="billing">Billing</string>
    <string name="back">Back</string>
    <string name="overview">Overview</string>
    <string name="quotation">Quotation</string>
    <string name="invoice">Invoice</string>
    <string name="more_options">More options</string>
    <string name="expand">Expand</string>
    <string name="invoice_number">Mã hóa đơn</string>
    <string name="created_at">Ngày xuất hóa đơn</string>
    <string name="product">Sản phẩm</string>
    <string name="quantity">Số lượng</string>

</resources>