<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/cart_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/cart_title_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_item"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/cart_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/cart_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_cart_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cart_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Giỏ hàng rỗng -->
        <ImageView
            android:id="@+id/cart_empty_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/cart_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/cart_empty_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- Nút thêm sản phẩm -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_item"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/red"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/cart_empty_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tổng tiền và đặt hàng -->
        <TextView
            android:id="@+id/cart_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_total_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/cart_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_total_cost"
            android:textColor="@color/red"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/cart_total_text"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!-- Nút Thanh Toán -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_checkout"
            android:textAllCaps="true"
            android:backgroundTint="#FBCBCB"
            android:textColor="@color/red"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>